tests/NormalTests/paczka1/fuzzy1/92404330.err
Error in line 1: JZkxvy A96 14,1
Error in line 4: KrR5Qbb A96 54,4
Error in line 3: 51XuEPg A534 20,3
Error in line 18: A96 S917 6,2
Error in line 21: JgJHDtLWTm7 A534 49,3
